# gpt-computer-agent

./: .env.example  .gitignore  AUTHENTICATION.md  CLAUDE.md  DEVELOPMENT.md  MANIFEST.in  README.TR.md  README.md  README_NEW.md  TESTING.md  alembic.ini  basic_test.py  build_macos.sh  bump.py  dev.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.sh  test_setup.py
.claude/agents/: unittest-generator.md
.github/ISSUE_TEMPLATE/: question.yml
.github/workflows/: claude-code-review.yml  release_generation.yml  test_publisher.yml
alembic/: env.py
alembic/versions/: initial_migration.py
docker/: Dockerfile  entrypoint.sh
example_use_cases/: workday_summerizer.md
examples/: basic_usage.py
notebooks/: README.md  investment_full_report.md  stock_report_improved.ipynb
scripts/: init_db.py
src/aideck/: __init__.py  api.py  character.py  custom_callback.py  display_tools.py  exceptions.py  gpt_computer_agent.py  remote.py  start.py  tooler.py
src/aideck/agent/: agent.py
src/aideck/audio/: record.py  tts.py
src/aideck/auth/: __init__.py
src/aideck/cache/: __init__.py  cache_manager.py
src/aideck/canvas/: canvas.py
src/aideck/config/: settings.py
src/aideck/context/: agent.py  default_prompt.py  sources.py  task.py
src/aideck/db/: session.py
src/aideck/graph/: graph.py
src/gpt_computer_agent/: api.py  gpt_computer_agent.py  start.py  top_bar_wrapper.py
tests/: conftest.py  test_api.py  test_classes.py  test_common.py  test_folder.py  test_version.py
tests/data/: sample_config.json  sample_config.yaml  test_checksum.txt
(+100 files in other folders)
