[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-computer-agent"
version = "0.29.0"
description = "GPT Computer Agent - A framework for building intelligent agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "KhulnaSoft DevOps", email = "info@khulnasoft.com"}
]
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "sentry-sdk[opentelemetry]>=2.19.2,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "loguru>=0.7.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0"
]

[project.scripts]
computeragent = "gpt_computer_agent.start:start"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
